<resources>
    <string name="app_name">TrashIn</string>
    <string name="product_image">Product Image</string>
    <string name="selamat_datang">Selamat datang Kembali!</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="simpan_produk">Simpan Produk</string>
    <string name="selamat_datang_main_page">Selamat Datang</string>
    <string name="pahlawan_lingkungan">Pahlawan Lingkungan</string>
    <string name="jual_sampahmu_disini">Jual sampahmu disini</string>
    <string name="more">More</string>
    <string name="reedem">Redeem</string>
    <string name="share">Share</string>
    <string name="trashin_point">TrashIn Point</string>
    <string name="jual_sampah_text">Tapi jangan cintamu ya, hehe</string>
    <string name="produk_daur_ulang">Produk Daur Ulang</string>
    <string name="artikel">Artikel</string>
    <string name="article_sub_text">Perluas pengetahuanmu \nmengenai kelola sampah</string>
    <string name="home">Home</string>
    <string name="receipt">Receipt</string>
    <string name="chat">Chat</string>
    <string name="profile">Profile</string>
    <string name="scan_barcode">Scan Barcode</string>
    <string name="scan_barcode_sub_text">Scan barcode</string>
    <string name="scan_instruction">Arahkan kamera pada kode barcode</string>
    <string name="jual_sampah">Jual sampah</string>
    <string name="sampah_yang_tersimpan">Sampah yang tersimpan</string>
    <string name="jual">Jual</string>
    <string name="total_berat">Total Berat</string>
    <string name="harga_jual">Harga Jual</string>
    <string name="null_weight">0 kg</string>
    <string name="null_price">Rp 0</string>
    <string name="masuk">Masuk</string>
    <string name="number_one">1</string>
    <string name="nama_lengkap">Nama Lengkap</string>
    <string name="konfirmasi_password">Konfirmasi Password</string>
    <string name="no_account_ask">Belum punya akun?</string>
    <string name="story_1">Kini Kamu Bisa Hasilin</string>
    <string name="story_2">Cuan Lebih Mudah</string>
    <string name="story_3">Dengan jual sampah yang kamu miliki</string>
    <string name="story_4">dan menjadi pahlawan lingkungan.</string>
    <string name="mulai">Mulai!</string>
</resources>