<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/home"
        android:icon="@drawable/ic_home_menu"
        android:title="@string/home"/>

    <item
        android:id="@+id/receipt"
        android:icon="@drawable/ic_receipt_menu"
        android:title="@string/receipt"/>

    <item
        android:id="@+id/placeHolder"
        android:title=""
        app:showAsAction="ifRoom"
        android:enabled="false"/>

    <item
        android:id="@+id/chat"
        android:icon="@drawable/ic_cs_menu"
        android:title="@string/chat"/>

    <item
        android:id="@+id/profile"
        android:icon="@drawable/ic_user_menu"
        android:title="@string/profile"/>

</menu>