<?xml version="1.0" encoding="utf-8"?>
<layout>

    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.mainActivity.MainActivity">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="10dp"
            android:padding="24dp">

            <ImageView
                android:id="@+id/upButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:src="@drawable/ic_arrow_up"/>

            <TextView
                android:id="@+id/activityText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="@id/upButton"
                app:layout_constraintBottom_toBottomOf="@id/upButton"
                app:layout_constraintStart_toEndOf="@id/upButton"
                android:layout_marginStart="12dp"
                android:text="@string/scan_barcode"
                android:fontFamily="@font/montserrat_semi_bold"
                android:elevation="10dp"
                android:textColor="@color/white"
                android:textSize="18sp"/>

            <TextView
                android:id="@+id/scanActivity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/scan_barcode_sub_text"
                app:layout_constraintTop_toBottomOf="@id/upButton"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="36dp"
                android:fontFamily="@font/montserrat_semi_bold"
                android:textColor="@color/white"/>

            <TextView
                android:id="@+id/scanInstruction"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/scan_instruction"
                app:layout_constraintTop_toBottomOf="@id/scanActivity"
                app:layout_constraintStart_toStartOf="parent"
                android:fontFamily="@font/montserrat_semi_bold"
                android:textColor="#BCBCBC"/>


        </androidx.constraintlayout.widget.ConstraintLayout>


        <androidx.camera.view.PreviewView
            android:id="@+id/cameraView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintTop_toTopOf="parent" />

    </FrameLayout>
</layout>